--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,4 @@
-[package]
-name = "fun-with-ropes"
-version = "0.1.0"
-edition = "2024"
+[workspace]
+resolver = "3"
+members = ["crates/my_first_rope"]
 
-[dependencies]
